feat: melhorias no layout da seção de destaque e ajuste na responsividade do rodapé

--- a/index.html
+++ b/index.html
@@ -76,19 +76,26 @@
     </div>
   </section>
 
-  <div class="w-screen h-20 flex items-center text-xs text-white bg-[#400000] to-red-700 p-4 justify-center ">
-    <div class="md:w-2/5 flex items-center justify-center">
-      <div class="md:w-full flex items-center justify-center">
-        <img class="w-8 mr-2" src="./assets/icon.svg" alt="" />
-        <p class="w-1/3 md:w-full font-bold md:text-[14px] mr-4 text-center">Melhor valor do mercado</p>
-      </div>
-      <div class="md:w-full flex items-center justify-center">
-        <img class="w-8 mr-2" src="./assets/codesandbox.svg" alt="" />
-        <p class="w-1/3 md:w-full font-bold text-center md:text-[14px]">Orçamento gratuito!</p>
-      </div>
-      <div class="md:w-full flex items-center justify-center">
-        <img class="w-8 mr-2" src="./assets/User-check.svg" alt="" />
-        <p class="w-1/3 md:w-full font-bold text-center md:text-[14px]">Equipe qualificada</p>
+  <div class="w-screen bg-[#400000] py-4 md:py-0 md:h-20 flex items-center text-white justify-center">
+    <div class="container mx-auto px-4">
+      <div class="flex flex-col md:flex-row items-center justify-center gap-4 md:gap-6">
+        <!-- Item 1 -->
+        <div class="flex items-center justify-center w-full md:w-auto mb-3 md:mb-0">
+          <img class="w-6 h-6 md:w-8 md:h-8" src="./assets/icon.svg" alt="" />
+          <p class="font-bold text-sm md:text-lg ml-2">Melhor valor do mercado</p>
+        </div>
+        
+        <!-- Item 2 -->
+        <div class="flex items-center justify-center w-full md:w-auto mb-3 md:mb-0">
+          <img class="w-6 h-6 md:w-8 md:h-8" src="./assets/codesandbox.svg" alt="" />
+          <p class="font-bold text-sm md:text-lg ml-2">Orçamento gratuito!</p>
+        </div>
+        
+        <!-- Item 3 -->
+        <div class="flex items-center justify-center w-full md:w-auto">
+          <img class="w-6 h-6 md:w-8 md:h-8" src="./assets/User-check.svg" alt="" />
+          <p class="font-bold text-sm md:text-lg ml-2">Equipe qualificada</p>
+        </div>
       </div>
     </div>
   </div>
@@ -473,7 +480,7 @@
   <footer class="w-screen bg-black flex flex-col items-center justify-center">
     <div class="w-screen flex flex-col items-center justify-center">
       <div class="mt-6 w-full flex flex-col items-center justify-center">
-        <img src="assets/logo-rocket-nameWhite.svg" alt="Rocket Junior" class="" />
+        <img src="assets/logo-rocket-nameWhite.svg" alt="Rocket Junior" class="w-1/3" />
       </div>
 
       <div class="mt-5 flex items-center justify-center w-1/2 border-t border-white pt-4 gap-6">
