fix: ajustes no banner e card de servicos

--- a/index.html
+++ b/index.html
@@ -162,19 +162,20 @@
       <div class="absolute inset-0 bg-gradient-to-r from-black/70 to-transparent md:from-black/60 md:to-black/30 z-[5]"></div>
 
       <!-- Imagem de banner -->
-      <img src="./assets/banner-1.png" class="object-cover object-[85%_50%] md:object-center w-full h-[40vh] md:h-auto"
+
+      <img src="./assets/banner-1.png" class="object-cover object-[85%_50%] md:object-center w-full h-[47vh] md:h-auto"
         alt="Banner principal da Rocket Jr mostrando equipe trabalhando" fetchpriority="high" />
 
       <!-- Conteúdo sobreposto -->
-      <div class="w-full md:w-9/10 z-10 absolute text-left text-white px-4 md:px-10 top-[60%] transform -translate-y-1/2">
+      <div class="w-full md:w-9/10 z-10 absolute text-left text-white px-4 md:px-10 top-[62%] transform -translate-y-1/2">
         <!-- Título principal com efeito de digitação -->
         <div class="max-w-lg md:max-w-[60%]">
-          <h1 id="banner-heading" class="text-2xl md:text-5xl font-bold mb-3 md:mb-6 leading-tight">
+          <h1 id="banner-heading" class="text-xl md:text-5xl font-bold mb-3 md:mb-6 leading-tight">
             Chegou a hora <span id="typed-text" class="text-red-300 whitespace-nowrap"></span>
           </h1>
 
           <!-- Subtítulo -->
-          <p class="text-base md:text-2xl w-full md:w-4/5 opacity-90 text-justify">
+          <p class="text-sm md:text-2xl w-full md:w-4/5 opacity-90 text-justify">
             A Rocket Jr está no mercado com o propósito de inovar empresas com o
             desenvolvimento de tecnologias. Deixe a Rocket te ajudar a direcionar
             seu negócio.
@@ -223,10 +224,10 @@
         </p>
       </div>
 
-      <div class="w-full px-4 flex flex-col md:flex-row items-stretch justify-center flex-wrap">
+      <div class="w-full px-4 flex flex-col md:flex-row md:items-stretch justify-center flex-wrap">
         <!-- items-stretch e flex-wrap -->
         <article
-          class="border rounded-3xl border-gray-500 flex flex-col items-center p-4 m-2 md:m-4 gap-2 w-full sm:w-4/5 md:w-1/4 lg:w-1/6 h-auto min-h-[280px]">
+          class="border rounded-3xl border-gray-500 flex flex-col items-center p-4 my-2 mx-auto md:m-4 gap-2 w-full sm:w-4/5 md:w-1/4 lg:w-1/6 h-auto min-h-[280px]">
           <!-- Ajuste de width -->
           <img src="./assets/Landing page.svg" class="w-12 h-12" alt="Ícone de Landing Page" loading="lazy" />
           <h3 class="font-bold text-xl text-center">Landing Page</h3>
@@ -238,7 +239,7 @@
         </article>
 
         <article
-          class="border rounded-3xl border-gray-500 flex flex-col items-center p-4 m-2 md:m-4 gap-2 w-full sm:w-4/5 md:w-1/4 lg:w-1/6 h-auto min-h-[280px]">
+          class="border rounded-3xl border-gray-500 flex flex-col items-center p-4 my-2 mx-auto md:m-4 gap-2 w-full sm:w-4/5 md:w-1/4 lg:w-1/6 h-auto min-h-[280px]">
           <!-- Ajuste de width -->
           <img src="./assets/TI.svg" class="w-12 h-12" alt="Ícone de Consultoria em TI" loading="lazy" />
           <h3 class="font-bold text-xl text-center">Consultoria em TI</h3>
@@ -250,7 +251,7 @@
         </article>
 
         <article
-          class="border rounded-3xl border-gray-500 flex flex-col items-center p-4 m-2 md:m-4 gap-2 w-full sm:w-4/5 md:w-1/4 lg:w-1/6 h-auto min-h-[280px]">
+          class="border rounded-3xl border-gray-500 flex flex-col items-center p-4 my-2 mx-auto md:m-4 gap-2 w-full sm:w-4/5 md:w-1/4 lg:w-1/6 h-auto min-h-[280px]">
           <!-- Ajuste de width -->
           <img src="./assets/portifolio.svg" class="w-12 h-12" alt="Ícone de Portfólio Digital" loading="lazy" />
           <h3 class="font-bold text-xl text-center">Portfólio Digital</h3>
@@ -262,7 +263,7 @@
         </article>
 
         <article
-          class="border rounded-3xl border-gray-500 flex flex-col items-center p-4 m-2 md:m-4 gap-2 w-full sm:w-4/5 md:w-1/4 lg:w-1/6 h-auto min-h-[280px]">
+          class="border rounded-3xl border-gray-500 flex flex-col items-center p-4 my-2 mx-auto md:m-4 gap-2 w-full sm:w-4/5 md:w-1/4 lg:w-1/6 h-auto min-h-[280px]">
           <!-- Ajuste de width -->
           <img class="w-12 h-12" src="./assets/sitee.svg" alt="Ícone de Desenvolvimento de Site" loading="lazy" />
           <h3 class="font-bold text-xl text-center">Desenvolvimento de Site</h3>
@@ -274,7 +275,7 @@
         </article>
 
         <article
-          class="border rounded-3xl border-gray-500 flex flex-col items-center p-4 m-2 md:m-4 gap-2 w-full sm:w-4/5 md:w-1/4 lg:w-1/6 h-auto min-h-[280px]">
+          class="border rounded-3xl border-gray-500 flex flex-col items-center p-4 my-2 mx-auto md:m-4 gap-2 w-full sm:w-4/5 md:w-1/4 lg:w-1/6 h-auto min-h-[280px]">
           <!-- Ajuste de width -->
           <img class="w-12 h-12" src="./assets/software.svg" alt="Ícone de Desenvolvimento de Sistemas"
             loading="lazy" />
@@ -293,7 +294,7 @@
         Quem Somos?
       </h2>
 
-      <p class="w-full px-4 md:w-2/3 lg:w-1/2 mx-auto text-white text-left md:text-center mb-8">
+      <p class="w-full px-4 md:w-2/3 lg:w-1/2 mx-auto text-white text-justify md:text-center md:text-justify mb-8 py-4">
         A Rocket Júnior (RJR) é a Empresa Júnior do curso de Sistemas de
         Informação do Campus Arapiraca – Unidade Educacional Penedo. Somos um
         time de estudantes apaixonados por tecnologia e inovação, que aplicam na
