logo insta e adaptação nav

--- a/index.html
+++ b/index.html
@@ -119,15 +119,21 @@
     </a>
 
     <nav
-      class="hidden md:flex w-full md:w-2/5 justify-center items-center gap-8 border border-gray-500 rounded-2xl py-2"
+      class="hidden md:flex w-full md:w-3/5 justify-center items-center gap-8 border-2 border-gray-500 rounded-2xl py-2"
       aria-label="Navegação principal">
-      <ul class="flex gap-6">
+      <ul class="flex gap-6 ">
         <li><a href="#inicio" class="text-gray-700 hover:text-red-700 font-medium">Início</a></li>
         <li><a href="#quem-somos" class="text-gray-700 hover:text-red-700 font-medium">Quem Somos?</a></li>
         <li><a href="#services" class="text-gray-700 hover:text-red-700 font-medium">Serviços</a></li>
         <li><a href="#faq" class="text-gray-700 hover:text-red-700 font-medium">FAQ</a></li>
         <li><a href="#contato" class="text-gray-700 hover:text-red-700 font-medium">Contato</a></li>
       </ul>
+    </nav>
+
+    <nav class="hidden md:flex w-1/5 md:justify-end items-center gap-4 py-2 -ml-10">
+      <a href="https://www.instagram.com/rocketjroficial/">
+        <img class="" src="instagram-icon-size_32.png" alt="logo instagram" />
+      </a>
     </nav>
 
     <!-- Botão do Menu Mobile -->
